@@ -38,8 +38,8 @@ ternary_node;
    already there, and replace is 0.
    Otherwise, replaces if it it exists, inserts if it doesn't, and
    returns the data you passed in. */
-PTR ternary_insert (ternary_tree *p, const char *s,
-                    PTR data, int replace);
+void *ternary_insert (ternary_tree *p, const char *s,
+		      void *data, int replace);
 
 /* Delete the ternary search tree rooted at P. 
    Does NOT delete the data you associated with the strings. */
@@ -47,5 +47,5 @@ void ternary_cleanup (ternary_tree p);
 
 /* Search the ternary tree for string S, returning the data associated
    with it if found. */
-PTR ternary_search (const ternary_node *p, const char *s);
+void *ternary_search (const ternary_node *p, const char *s);
 #endif
